--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -186,32 +186,32 @@ ru:
             В <b>clarat family</b> ты найдешь различные предложения по поддержке. Они помогают в самых разных ситуациях и проблемах. Мы отсортировали их по темам:
             <p>
             <ul>
-            <li>
+            <li class="FAQ__ico--family--family">
             <b>Детская коляска - семейные проблемы</b><br>
             Здесь ты найдешь помощь, если в твоей семье есть проблемы. Например при ссорах. И при многих других, как например тех, с которыми сталкиваешься, когда взролеешь. Либо воспитание детей. Здесь найдется помощь для каждогов  семье. Так же здесь есть много помощи детям и родителям.
             </li>
             <br>
-            <li>
+            <li class="FAQ__ico--health--family">
             <b>Сердце - здоровье</b><br>
             Здесь ты найдешь помощь, например если тебе плохо, если ты болеешь. Либо если кто-либо в твоей семье болеет. Или если кто-то из вас брется с зависимостью. Так же здесь можно найти помощь при беременности.
             </li>
             <br>
-            <li>
+            <li class="FAQ__ico--learn--family">
             <b>Книга - учеба и работа</b><br>
             Здесь ты найдешь помощь, например если у тебя проблемы в школе. Либо в учебе. Так же ты найдешь здесь помощь в выборе будущей профессии. Либо при поиске курса немецкго языка.
             </li>
             <br>
-            <li>
+            <li class="FAQ__ico--everydaylife--family">
             <b>Указатель - заботы в повседневнеой жизни</b><br>
             Здесь ты найдешь помощь, если у тебя маленькие или боьшие проблемы в повседневной жизни. Например если у тебя проблемы с деньгами. Или если ты живешь на улице. А так же, еси ты что-то ищешь, чем заняться в свободное время. Либо тебе нужна помощь заполнить документы и формуляры.
             </li>
             <br>
-            <li>
+            <li class="FAQ__ico--violence--family">
             <b>Кулак - насилие</b><br>
             Здесь ты найдешь помощь, например если кто-то тебя бьет или ты подвергаешься насилию. Ты так же найдешь здесь помощь, если ты сам стал агрессивным или совершил что-то плохое.
             </li>
             <br>
-            <li>
+            <li class="FAQ__ico--crisis--family">
             <b>Молния - острая необходимость</b><br>
             Здесь ты быстро найдешь помощь, если ты в крайней нужде или беде. В предложениях помощи, где стоит <b>Днем и Ночью</b>, ты можешь обращаться в любое время суток.
             </li>
@@ -219,7 +219,7 @@ ru:
             </p>
           question: "По каким темам могу я найти помощь в clarat family?"
         question_3:
-          answer: "В <b>clarat refugees</b> ты найдешь множество предложений помощи. Для тебя мы их упорядочили:\n<p>\n<ul>\n<li>\n<b>Параграф - убежище и право</b><br>\nЗдесь ты найдешь помощь, если у тебя есть вопросы по процессу рассмотрения заявлений для предоставления временного убежища или статуса беженца. Не важно, перед поачей заявления, во время или после. Например также, если у тебя право на кратковременное ограниченное пребывание в стране. Или если у тебя вопросы по немецким законам. Также несовершентнолетние бежнецы найдут здесь поддержку. \n</li>\n<br>\n<li>\n<b>Детская коляска - семейные проблемы</b><br>\nЗдесь ты найдешь помощь, если в твоей семье есть проблемы. Например при ссорах. И при многих других, как например тех, с которыми сталкиваешься, когда взролеешь. Либо воспитание детей. Здесь найдется помощь для каждогов  семье. Так же здесь есть много помощи детям и родителям.\n</li>\n<br>\n<li>\n<b>Сердце - здоровье</b><br>\nЗдесь ты найдешь помощь, если ты болеешь. Либо во время беременности. Ты также найдешь здесь помощь, если тебе плохо из-за войны и пыток. Либо если ты инвалид. Здесь ты найдешь врачей и психологов, которые помогают беженцам.\n</li>\n<br>\n<li>\n<b>Книга - учеба и работа</b><br>\nЗдесь ты найдешь помощь, если у тебя есть вопросы относительно учебы и работы. Нарпимер по детским садикам и школам. Или если ты хочешь знать, как ты можешь со статусом бежена здесь получить образование. Или если ты ищешь место профессиональной подготовки или работы. Так же ты найдешь здесь много разных курсов немецкого языка и курсы интеграции, которые ты можешь пройти как беженец. \n</li>\n<br>\n<li>\n<b>Указатель - жизнь в Германии</b><br>\nЗдесь ты найдешь помощь, если у тебя проблемы с ведомствами и учреждениями. Например если ты не знаешь немецкого языка, тогда здесь ты найдешь кого-нибудь, кто для тебя переведет. Либо кого-то, кто с тобой сходит в это учреждение. Также ты найдешь здесь и другую помощь - мы покажем тебе, например, места, где можно получить еду или мебель, одежду. И ты найдешь здесь возможности познакомитсья с другими людьми. Например в спортивном кружке или на курсах готовки.\n</li>\n<br>\n<li>\n<b>Кулак - насилие</b><br>\nЗдесь ты найдешь помощь, например если тебя кто-то ударил. Или во время войны ты подвергался пыткам. Также ты найдешь здесь помощь, если ты хочешь выйти из исламистской группировки.\n</li>\n<br>\n<li>\n<b>Молния - острая необходимость</b><br>\nЗдесь ты быстро найдешь помощь, если ты в крайней нужде или беде. В предложениях помощи, где стоит Днем и Ночью, ты можешь обращаться в любое время суток.\n</li>\n</ul>\n</p>"
+          answer: "В <b>clarat refugees</b> ты найдешь множество предложений помощи. Для тебя мы их упорядочили:\n<p>\n<ul>\n<li class=\"FAQ__ico--legal--refugees\">\n<b>Параграф - убежище и право</b><br>\nЗдесь ты найдешь помощь, если у тебя есть вопросы по процессу рассмотрения заявлений для предоставления временного убежища или статуса беженца. Не важно, перед поачей заявления, во время или после. Например также, если у тебя право на кратковременное ограниченное пребывание в стране. Или если у тебя вопросы по немецким законам. Также несовершентнолетние бежнецы найдут здесь поддержку. \n</li>\n<br>\n<li class=\"FAQ__ico--family--refugees\">\n<b>Детская коляска - семейные проблемы</b><br>\nЗдесь ты найдешь помощь, если в твоей семье есть проблемы. Например при ссорах. И при многих других, как например тех, с которыми сталкиваешься, когда взролеешь. Либо воспитание детей. Здесь найдется помощь для каждогов  семье. Так же здесь есть много помощи детям и родителям.\n</li>\n<br>\n<li class=\"FAQ__ico--health--refugees\">\n<b>Сердце - здоровье</b><br>\nЗдесь ты найдешь помощь, если ты болеешь. Либо во время беременности. Ты также найдешь здесь помощь, если тебе плохо из-за войны и пыток. Либо если ты инвалид. Здесь ты найдешь врачей и психологов, которые помогают беженцам.\n</li>\n<br>\n<li class=\"FAQ__ico--learn--refugees\">\n<b>Книга - учеба и работа</b><br>\nЗдесь ты найдешь помощь, если у тебя есть вопросы относительно учебы и работы. Нарпимер по детским садикам и школам. Или если ты хочешь знать, как ты можешь со статусом бежена здесь получить образование. Или если ты ищешь место профессиональной подготовки или работы. Так же ты найдешь здесь много разных курсов немецкого языка и курсы интеграции, которые ты можешь пройти как беженец. \n</li>\n<br>\n<li class=\"FAQ__ico--everydaylife--refugees\">\n<b>Указатель - жизнь в Германии</b><br>\nЗдесь ты найдешь помощь, если у тебя проблемы с ведомствами и учреждениями. Например если ты не знаешь немецкого языка, тогда здесь ты найдешь кого-нибудь, кто для тебя переведет. Либо кого-то, кто с тобой сходит в это учреждение. Также ты найдешь здесь и другую помощь - мы покажем тебе, например, места, где можно получить еду или мебель, одежду. И ты найдешь здесь возможности познакомитсья с другими людьми. Например в спортивном кружке или на курсах готовки.\n</li>\n<br>\n<li class=\"FAQ__ico--violence--refugees\">\n<b>Кулак - насилие</b><br>\nЗдесь ты найдешь помощь, например если тебя кто-то ударил. Или во время войны ты подвергался пыткам. Также ты найдешь здесь помощь, если ты хочешь выйти из исламистской группировки.\n</li>\n<br>\n<li class=\"FAQ__ico--crisis--refugees\">\n<b>Молния - острая необходимость</b><br>\nЗдесь ты быстро найдешь помощь, если ты в крайней нужде или беде. В предложениях помощи, где стоит Днем и Ночью, ты можешь обращаться в любое время суток.\n</li>\n</ul>\n</p>"
           question: "По каким темам могу я найти помощь в clarat refugees?"
         question_4:
           answer: "На главной странице справа ты увидишь символ молнии. Если ты на него нажмешь, ты увидишь полный список возможностей поддержки в критических ситуациях, т.е. если тебе нужна срочная помощь.  В предложениях помощи, где стоит <b>Днем и Ночью</b>, ты можешь обращаться в любое время суток. Если тебе не хочется выходить из дома, тебе так же могут помочь по телефону или интернет."
