--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1591,6 +1591,7 @@ de:
           refugees.
     impressum:
       heading: Impressum
+      notice: clarat hilft dir dabei, Hilfe zu finden. Aber bei clarat bekommst du keine Beratung. Dafür gibt es Experten. Und genau die kannst du über uns finden.
       responsible_html: |
         Geschäftsführer<br/>
         Dr. Stefan Shaw und Mathias Barth<br/>
