--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1507,6 +1507,7 @@ en:
           for help for refugees.
     impressum:
       heading: Impressum
+      notice: 
       responsible_html: |-
         Geschäftsführer<br/>
         Dr. Stefan Shaw und Mathias Barth<br/>
