--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -248,10 +248,10 @@ fr:
             </p>
           question: Comment trouver l’aide qu’il me faut?
         question_6:
-          answer: Beaucoup de services de soutien, que tu trouves sur clarat sont gratuits. Il y a aussi des aides qui sont payantes. Ça ne veut pas automatiquement dire que tu doives payer toi-même. C’est possible que la caisse maladie le paie. Ou un organisme public. Ça peut être par exemple une administration. Ou un service. Le mieux est que tu demandes directement là où on te propose de l’aide. Alors tu es à cent pourcent sûr si le service  de soutien est gratuit ou non.
+          answer: Beaucoup d'offres d'aide, que tu trouves sur clarat sont gratuits. Il y a aussi des aides qui sont payantes. Ça ne veut pas automatiquement dire que tu doives payer toi-même. C’est possible que la caisse maladie le paie. Ou un organisme public. Ça peut être par exemple une administration. Ou un service. Le mieux est que tu demandes directement là où on te propose de l’aide. Alors tu es à cent pourcent sûr si le service  de soutien est gratuit ou non.
           question: Je trouve de l’aide dont je peux en profiter gratuitement?
         question_7:
-          answer: Tu peux profiter anonymement de beaucoup de services de soutien que tu trouves sur clarat. Ça signifie que tu ne dois dire à personne ton nom. Si tu peux profiter anonymement de l’aide , tout est expliqué sur clarat <i>tu dois faire quoi?</i> Si ce n’est pas écrit, le mieux à faire est de le demander directement là où on te propose de l’aide.
+          answer: Tu peux profiter anonymement de beaucoup d'offres d'aide que tu trouves sur clarat. Ça signifie que tu ne dois dire à personne ton nom. Si tu peux profiter anonymement de l’aide, tout est expliqué sur clarat <i>tu dois faire quoi?</i> Si ce n’est pas écrit, le mieux à faire est de le demander directement là où on te propose de l’aide.
           question: Je trouve de l’aide dont je peux profiter anonymement?
         question_8:
           answer: |-
@@ -430,7 +430,7 @@ fr:
         explanation_1: Ici, tu vois du premier coup d'œil  tous tes services sur clarat. Ce sont les services où nous avons trouvé ton adresse électronique.
         explanation_2: Si à l'avenir, nous trouvons de tes nouveaux services, alors tu trouveras aussi les liens vers ces nouveaux services ici.
         explanation_3: 'Tu peux marquer ces pages et ainsi voir d''un coup d''œil ce qu''il y a de toi sur clarat '
-        explanation_4: Tu souhaites être informé par courrier électronique lorsque de tes  nouveaux services sont en ligne sur clarat? Alors utilise le lien qui se trouve à la fin du courrier électronique que nous t'avons envoyé.
+        explanation_4: Tu souhaites être informé par e-mail lorsque de tes  nouveaux services sont en ligne sur clarat? Alors utilise le lien qui se trouve à la fin du courrier électronique que nous t'avons envoyé.
         info: Information
     subscribe:
       success_html: |-
@@ -785,7 +785,7 @@ fr:
     single_search_result:
       encounters:
         chat: discussion en ligne
-        email: courrier électronique
+        email: E-mail
         forum: Forums
         hotline: Téléphone
         online-course: cours en ligne
@@ -799,28 +799,27 @@ fr:
           refugees: Bientôt des services pour les réfugiés
           text: clarat.org est en train d'être actualisée
       footer:
-        about: "à propos de nous"
-        blog: blog
+        about: "À propos de nous"
+        blog: Blog
         contact: contact
-        faq: questions fréquentes
+        faq: Questions fréquentes
         fb:
           anchor: Facebook
           href: https://www.facebook.com/claratpunktorg
         gplus:
           anchor: Google+
           href: https://plus.google.com/110429028641743127592/about
-        impressum: impression
-        privacy: protection des données
-        tos: informations juridiques
+        impressum: Impression
+        privacy: Protection des données
+        tos: Informations juridiques
         twitter:
           anchor: Twitter
           href: https://twitter.com/claratpunktorg
       modal:
         beta_modal:
           link: "écris-nous tout simplement un message"
-          text: |
-            Notre site internet clarat.org est encore tout nouveau. Pour Berlin, tu peux déjà trouver beaucoup de listes d'aide. Bientôt , nous allons collecter aussi des listes d'aide pour d'autres villes. Nous nous réjouissons que tu aides si tu vois quelque chose que nous pourrions améliorer ou qui ne fonctionne pas correctement. donc
-        unavailable_location_modal: "Pour ta localisation, il n'y a actuellement sur clarat que des services téléphoniques ou en ligne. C'est-à-dire, qu'on aide par téléphone ou en ligne. Par exemple par courrier électronique ou sur une discussion en ligne. Nous t'informons volontiers dès qu'il y aura de l'aide tout proche de chez toi. \nTape ton adresse électronique ici"
+          text: Notre site internet clarat.org est encore tout nouveau. Pour Berlin, tu peux déjà trouver beaucoup de offres d'aide. Bientôt , nous allons collecter aussi des listes d'aide pour d'autres villes. Nous nous réjouissons que tu aides si tu vois quelque chose que nous pourrions améliorer ou qui ne fonctionne pas correctement. donc
+        unavailable_location_modal: "Pour ta localisation, il n'y a actuellement sur clarat que des services téléphoniques ou en ligne. C'est-à-dire, qu'on aide par téléphone ou en ligne. Par exemple par e-mail ou sur une discussion en ligne. Nous t'informons volontiers dès qu'il y aura de l'aide tout proche de chez toi. \nTape ton adresse e-mail ici"
       nav_lang:
         languages:
           ar: "عربي"
@@ -834,9 +833,9 @@ fr:
       navigation:
         category_headline: ou recherches par catégories
         claim:
-          family: listes d'aide pour les enfants, les ados et les familles
-          main: trouver simplement de l'aide
-          refugees: listes d'aide pour les réfugiés
+          family: Offres d'aide pour les enfants, les ados et les familles
+          main: Trouver simplement de l'aide
+          refugees: Offres d'aide pour les réfugiés
   offers:
     index:
       filters:
@@ -850,7 +849,7 @@ fr:
             remote: téléphonique ou en ligne
           encounter:
             chat: discussion instantanée
-            email: Courrier électronique
+            email: E-mail
             fax: 
             forum: forum
             hotline: téléphone
@@ -927,12 +926,12 @@ fr:
       who: Qui propose cette aide?
       who_contact_people:
         dr: Dr.
-        email: Courrier électronique
+        email: 'E-mail:'
         fax: 'Fax:'
         female: Madame
         male: Monsieur
         obfuscated_email: Cette adresse électronique est protégée contre les robots collecteurs d'adresses par JavaScript. Active JavaScript pour les lire.
-        phone: téléphone
+        phone: Téléphone
         prof_dr: Prof. Dr
       who_location:
         organizations: 'Un service de:'
@@ -946,8 +945,8 @@ fr:
       time_frame: "%{open} - %{close}"
   organizations:
     show:
-      headline-offers--family: Listes d'aide pour les enfants, les ados et les familles
-      headline-offers--refugees: Listes d'aide pour les réfugiés
+      headline-offers--family: Offres d'aide pour les enfants, les ados et les familles
+      headline-offers--refugees: Offres d'aide pour les réfugiés
       offers_all: Cette organisation propose quel type d'aide?
       where: Tu trouves cette organisation où?
       who: Cette organisation, elle fait quoi?
@@ -1036,10 +1035,10 @@ fr:
       how:
         heading: |
           Clarat, comment ça fonctionne?
-        text: Tape dans le champ de recherche le problème pour lequel tu as besoin d’aide.. Ou ce qui t’oppresse.. Ou choisis parmi nos thèmes. Tu vois déjà toutes les listes d’aide près de chez toi. On t’explique aussi comment tu peux recevoir de l’aide. C’est-à-dire, s’il faut appeler quelqu’un ou s’il faut écrire un courriel. Ou si tu peux tout simplement passer.
+        text: Tape dans le champ de recherche le problème pour lequel tu as besoin d’aide. Ou ce qui t’inquiète. Ou choisis parmi nos thèmes. Tu verras toutes les offres d’aide près de chez toi. On t’explique aussi comment tu peux recevoir de l’aide. C’est-à-dire, s’il faut appeler quelqu’un ou s’il faut écrire un courriel. Ou si tu peux tout simplement passer.
       title:
-        family: Listes d'aide pour les enfants, les ados et les familles
-        refugees: Listes d'aide pour les réfugiés
+        family: Offres d'aide pour les enfants, les ados et les familles
+        refugees: Offres d'aide pour les réfugiés
       whom:
         heading: |
           Clarat, c’est pour qui?
@@ -1047,9 +1046,10 @@ fr:
           clarat est là pour tous. clarat family pour les enfants, les ados et les familles. clarat refugees pour les réfugiés. Ici tu trouves de l’aide si tu as des questions ou des problèmes. De l’aide pour toi, pour ta famille ou pour tes amis. Ou pour d’autre gens que tu connais et qui ont besoin d’aide.
       why:
         heading: Clarat, pourquoi ça existe?
-        text: Avec clarat on peut facilement trouver de l’aide. En Allemagne, il y a beaucoup de services de soutien pour les enfants, les ados et les familles. Aussi pour les réfugiés. Mais ils ne sont pas toujours faciles à trouver. Nous allons t’aider.  S’il est question de sujets ayant trait à la famille, va sur clarat family. S’il est question de sujets ayant trait aux réfugiés, va sur clarat refugees.
+        text: Avec clarat on peut facilement trouver de l’aide. En Allemagne, il y a beaucoup d'offres d'aide pour les enfants, les ados et les familles. Aussi pour les réfugiés. Mais ils ne sont pas toujours faciles à trouver. Nous allons t’aider.  S’il est question de sujets ayant trait à la famille, va sur clarat family. S’il est question de sujets ayant trait aux réfugiés, va sur clarat refugees.
     impressum:
       heading: Impressum
+      notice: 
       responsible_html: |-
         Geschäftsführer<br/>
         Dr. Stefan Shaw und Mathias Barth<br/>
@@ -1381,12 +1381,12 @@ fr:
     emails: Adresses électroniques
     faq: questions-fréquentes
     haeufige-fragen: questions-fréquentes
-    impressum: impression
+    impressum: Impression
     new: nouveau
     offers: liste-de-services
     organizations: organisations
     preview: preview
-    rechtliche-hinweise: informations-juridiques
+    rechtliche-hinweise: Informations-juridiques
     search_locations: search_locations
     subscribe: subscribe
     subscriptions: subscriptions
@@ -1419,7 +1419,7 @@ fr:
       new:
         button: s'abonner à la newsletter
         placeholder: adresse électronique
-  success: Merci beaucoup. Nous allons bientôt avoir des propositions d'aide près de chez toi. Dès que cela est le cas, tu vas recevoir un courrier électronique de notre part.
+  success: Merci beaucoup. Nous allons bientôt avoir des propositions d'aide près de chez toi. Dès que cela est le cas, tu vas recevoir un e-mail de notre part.
   update_requests:
     create:
       success: Merci beaucoup, nous avons bien reçu ton message. Dès que nous serons actifs près de chez toi, nous nous manifesterons.
