another localeapp pull for french

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1115,7 +1115,7 @@ en:
       footer:
         about: About us
         blog: Blog
-        contact: contact
+        contact: Contact
         faq: FAQ
         fb:
           anchor: Facebook
