--- a/config/locales/gems/routes/fr.yml
+++ b/config/locales/gems/routes/fr.yml
@@ -9,7 +9,7 @@ fr:
     haeufige-fragen: questions-fréquentes
     impressum: impression
     new: nouveau
-    offers: liste-de-services
+    offers: offres-d-aide
     organizations: organisations
     preview: preview
     rechtliche-hinweise: informations-juridiques
