clarat-org/#785 - updated _base for new language, pulled localeapp and silenced papertail-warnings

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -669,6 +669,7 @@ ar:
         rom: "لغة رومنية - Romani"
         ron: "لغة رومانية - română"
         rus: "لغة روسية - русский"
+        skr: "لغة صربية كرواتية - српскохрватски / hrvatskosrpski"
         slo: "لغة سلوفاكية - slovenský jazyk"
         snk: "لغة سوننكية - Soninkanxaane"
         som: "لغة صومالية - Soomaali"
