--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1164,6 +1164,7 @@ de:
         rom: Romanes - Romani
         ron: Rumänisch - română
         rus: Russisch - русский
+        skr: Serbokroatisch - српскохрватски / hrvatskosrpski
         slo: Slowakisch - slovenský jazyk
         snk: Soninke - Soninkanxaane
         som: Somali - Soomaali
