--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1080,6 +1080,7 @@ en:
         rom: Romany - Romani
         ron: Romanian - română
         rus: Russian - русский
+        skr: Serbo-Croatian - српскохрватски / hrvatskosrpski
         slo: Slovak - slovenský jazyk
         snk: Soninke - Soninkanxaane
         som: Somali - Soomaali
