--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -765,6 +765,7 @@ fr:
         rom: Romani - Romani
         ron: Roumain - română
         rus: Russe - русский
+        skr: Serbo-croate - српскохрватски / hrvatskosrpski
         slo: Slovaque - slovenský jazyk
         snk: Soninké - Soninkanxaane
         som: Somali - Soomaali
