--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -812,6 +812,7 @@ pl:
         rom: Język romski - Romani
         ron: Język rumuński - română
         rus: Język rosyjski - русский
+        skr: Język serbsko-chorwacki - српскохрватски / hrvatskosrpski
         slo: Język słowacki - slovenský jazyk
         snk: Język soninke - Soninkanxaane
         som: Język somalijski - Soomaali
