--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -793,6 +793,7 @@ ru:
         rom: "Цыганский язык - Romani"
         ron: "Румынский язык - română"
         rus: "Русский язык - русский"
+        skr: "Сербохорватский язык - српскохрватски / hrvatskosrpski"
         slo: "Словацкий язык - slovenský jazyk"
         snk: "Сонинке язык - Soninkanxaane"
         som: "Сомалийский язык - Soomaali"
