--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -684,6 +684,7 @@ tr:
         rom: "Çingenece - Romani"
         ron: Rumence - română
         rus: Rusça - русский
+        skr: Sırp-Hırvatça - српскохрватски / hrvatskosrpski
         slo: Slovakça - slovenský jazyk
         snk: Soninke - Soninkanxaane
         som: Somalice - Soomaali
