fixed some non-uniform routes

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -489,6 +489,7 @@ ar:
         rom: Rom
         ron: Ron
         rus: Rus
+        skr: Skr
         slo: Slo
         snk: Snk
         som: Som
