--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -958,6 +958,7 @@ de:
         rom: Rom
         ron: Ron
         rus: Rus
+        skr: Skr
         slo: Slo
         snk: Snk
         som: Som
