--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -897,6 +897,7 @@ en:
         rom: Rom
         ron: Ron
         rus: Rus
+        skr: Skr
         slo: Slo
         snk: Snk
         som: Som
