--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -632,6 +632,7 @@ pl:
         rom: Rom
         ron: Ron
         rus: Rus
+        skr: Skr
         slo: Slo
         snk: Snk
         som: Som
