--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -609,6 +609,7 @@ ru:
         rom: Rom
         ron: Ron
         rus: Rus
+        skr: Skr
         slo: Slo
         snk: Snk
         som: Som
