--- a/config/locales/gems/routes/fr.yml
+++ b/config/locales/gems/routes/fr.yml
@@ -3,8 +3,8 @@ fr:
     '404': "'404'"
     contacts: contact
     datenschutzhinweise: protection-des-données
-    definitions: Définitions
-    emails: Adresses électroniques
+    definitions: définitions
+    emails: adresses-électroniques
     faq: questions-fréquentes
     haeufige-fragen: questions-fréquentes
     impressum: impression
